--- a/index.html
+++ b/index.html
@@ -179,6 +179,107 @@
     <img src="court.jpg" alt="Advogados em um Tribunal"/>
   </div>
 </section>
+<!--Colaboradores-->
+<section id="team">
+  <span class="square"></span>
+  <h2>
+    A <span>Pearson Hardman</span>
+    é formada por advogados especialistas em várias áreas do Direitos
+  </h2>
+  <div class="employees">
+    <div class="employee">
+      <img src="mike.jpg" alt="Mike Ross">
+      <p class="employee-name">Mike Ross</p>
+      <p class="employee-role">Advogado</p>
+    </div>
+    <div class="employee">
+    <img src="harvey.png" alt="Harvey Specter">
+    <p class="employee-name">Harvey Specter</p>
+    <p class="employee-role">Advogado Sênior</p>
+    </div>
+    <div class="employee">
+    <img src="louis.jpg" alt="Louis Litt">
+    <p class="employee-name">Louis Litt</p>
+    <p class="employee-role">Advogado</p>
+    </div>
+    <div class="employee">
+    <img src="jessica.jpg" alt="jessica Pearson">
+    <p class="employee-name">Jessica Pearson</p>
+    <p class="employee-role">CEO</p>
+    </div>
+  </div>
+</section>
+<!--Contato-->
+<section id="contact" class="text-image-section">
+  <div id="contact-information" class="text-container">
+  <img src="office.jpg" alt="Advogados no Escritorio">
+  </div>
+  <div id="contact-information" class="text-container">
+    <i class="bi bi-envelope"></i>
+    <p class="section-subtitle"> Entre em Contato</p>
+    <form>
+      <div class="form-control">
+      <input type="text" name="name" id="name" placeholder="Nome" />
+      <input type="email" name="email" id="email" placeholder="E-mail" />
+      </div>
+      <input type= "text" name="Phone" id="phone" placeholder="Telefone" />
+      <textarea 
+      name="message"
+      id="message"
+      placeholder="Escreva sua mensagem aqui..."
+      ></textarea>
+      <input type="submit" value="Enviar Mensagem" class="btn"/>
+    </form>
+  </div>
+</section>
+<!--Rodapé-->
+<footer id="footer">
+  <div class="contact-info">
+    <div class="footer-brand">
+      <h2>Pearson Hardman</h2>
+      <p>O melhor escritório de advocacia do país</p>
+    </div>
+    <p><i class="bi bi-geo-alt"></i>Rua dos Advogados,1006</p>
+    <p><i class="bi bi-telephone"></i>(98) 9999-9999</p>
+    <p><i class="bi bi-envelope"></i>contato@Pearsonhardman.com</p>
+  <div class="social-networks">
+    <p>Siga-nos</p>
+    <div class="networks">
+      <a href="#"><i class="bi bi-facebook"></i></a>
+      <a href="#"><i class="bi bi-twitter"></i></a>
+      <a href="#"><i class="bi bi-linkedin"></i></a>
+      <a href="#"><i class="bi bi-instagram"></i></a>
+    </div>
+  </div>
+</div>
+<div class="links-container">
+  <h4>Outros serviços</h4>
+  <nav>
+    <a href="#">Propriedade intelectual</a>
+    <a href="#">LGPD</a>
+    <a href="#">Direito internacional</a>
+    <a href="#">Processos</a>
+    <a href="#">Consultoria jurídica</a>
+  </nav>
+</div>
+<div class="links-container">
+  <h4>Páginas</h4>
+  <nav>
+    <a href="#">Termos e condições</a>
+    <a href="#">Política de privacidade</a>
+    <a href="#">Fale com um especialista</a>
+    <a href="#">FAQ</a>
+  </nav>
+</div>
+<div class="links-container">
+  <h4>Consulta grátis</h4>
+  <div class="phone-number">
+    <i class="bi bi-telephone"></i>
+    <p>(98) 9999-9999</p>
+  </div>
+  <p class="phone-info">Este telefone é especial para tratar de casos já em andamento</p>
+</div>
+</footer>
   
 </body>
 </html>
