--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
   <!-- Estilos -->
    <link rel="stylesheet" href="styles.css">
+<!--Scripts-->
+<script src="js/scripts.js">
+  
+</script>
 </head>
 <body>
   <!-- Cabeçalho e Banner-->
@@ -31,6 +35,14 @@
         <a href="#contact">Contato</a>
       </nav>
       <!-- Menu Mobile -->
+       <i class="bi bi-list" id="menu"></i>
+      <nav id="mobile-navbar" >
+        <i class="bi bi-x-lg" id="close-menu"></i>
+        <a href="#header">Início</a>
+        <a href="#expertise-areas">Serviços</a>
+        <a href="#about">Sobre</a>
+        <a href="#team">Time</a>
+        <a href="#contact">Contato</a>
     </div>
 <div class="banner active">
 <span class="square"></span>
